sandbox/output
fizzbuzz.c: In function 'fizzBuzzSeq':
fizzbuzz.c:38:9: error: passing argument 1 of 'fizzBuzz' makes pointer from integer without a cast [-Werror]
         strcat(sbuf, fizzBuzz(i));
         ^
fizzbuzz.c:10:13: note: expected 'char *' but argument is of type 'int'
 const char* fizzBuzz(char* buf, int val)
             ^
fizzbuzz.c:38:9: error: too few arguments to function 'fizzBuzz'
         strcat(sbuf, fizzBuzz(i));
         ^
fizzbuzz.c:10:13: note: declared here
 const char* fizzBuzz(char* buf, int val)
             ^
cc1: all warnings being treated as errors
make: *** [test] Error 1
